<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/app_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_des"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/number_1"
                android:layout_margin="@dimen/dp_10"
                android:layout_width="20dp"
                android:inputType="number"
                android:textSize="22dp"
                android:maxLength="1"
                android:gravity="center"
                android:padding="5dp"
                android:background="@drawable/editview_border"
                android:layout_height="50dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/number_2"
                android:layout_margin="@dimen/dp_10"
                android:layout_width="20dp"
                android:inputType="number"
                android:padding="5dp"
                android:maxLength="1"
                android:textSize="22dp"
                android:gravity="center"
                android:background="@drawable/editview_border"
                android:layout_height="50dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/number_3"
                android:layout_margin="@dimen/dp_10"
                android:layout_width="20dp"
                android:inputType="number"
                android:padding="5dp"
                android:maxLength="1"
                android:textSize="22dp"
                android:gravity="center"
                android:layout_height="50dp"
                android:background="@drawable/editview_border"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/number_4"
                android:layout_margin="@dimen/dp_10"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:maxLength="1"
                android:textSize="22dp"
                android:gravity="center"
                android:inputType="number"
                android:background="@drawable/editview_border"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/number_5"
                android:layout_margin="@dimen/dp_10"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:maxLength="1"
                android:textSize="22dp"
                android:gravity="center"
                android:inputType="number"
                android:background="@drawable/editview_border"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/number_6"
                android:layout_margin="@dimen/dp_10"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:maxLength="1"
                android:textSize="22dp"
                android:gravity="center"
                android:inputType="number"
                android:background="@drawable/editview_border"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/code_continue_btn"
            android:layout_marginTop="30dp"
            android:text="@string/code_btn"
            android:textStyle="bold"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>